Fix style on iOS

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -36,6 +36,10 @@
   padding-right: 12px;
 }
 
+.search-box-input::-webkit-search-decoration {
+  display: none;
+}
+
 .search-box-input:focus {
   outline: 0; /* @TODO Fix */
 }
@@ -146,6 +150,8 @@
   appearance: none;
   border: 0;
   margin: 0;
+  padding: 0;
+  color: inherit;
 }
 
 .floor-box-button:active {
@@ -175,6 +181,8 @@
   border: 0;
   border-radius: 50%;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  padding: 0;
+  color: inherit;
 }
 
 .info-button-icon {
@@ -250,6 +258,9 @@
   border-bottom: 1px solid rgba(0, 0, 0, .1);
 
   gap: 10px;
+
+  appearance: none;
+  color: inherit;
 }
 
 .search-list-element:active {
